Remove repository package
